--- a/package/batocera/emulationstation/batocera-es-system/locales/batocera-es-system.pot
+++ b/package/batocera/emulationstation/batocera-es-system/locales/batocera-es-system.pot
@@ -5729,37 +5729,49 @@ msgstr ""
 
 #. TRANSLATION: mame/pcsx2
 msgctxt "game_options"
-msgid "Mac 128k (2 LD Floppies)"
+msgid ""
+"Select model of Mac (Recommendations are Mac Plus for B&W, Mac LC 3 for "
+"Color)"
 msgstr ""
 
 #. TRANSLATION: mame/pcsx2
 msgctxt "game_options"
-msgid "Mac 512k (2 LD Floppies)"
+msgid "Mac 128k (128kb RAM, 2 LD Floppies)"
 msgstr ""
 
 #. TRANSLATION: mame/pcsx2
 msgctxt "game_options"
-msgid "Mac Plus (2 LD Floppies/HDD)"
+msgid "Mac 512k (512kb RAM, 2 LD Floppies)"
 msgstr ""
 
 #. TRANSLATION: mame/pcsx2
 msgctxt "game_options"
-msgid "Mac SE (2 LD Floppies/HDD)"
+msgid "Mac Plus (4Mb RAM, 2 LD Floppies/HDD)"
 msgstr ""
 
 #. TRANSLATION: mame/pcsx2
 msgctxt "game_options"
-msgid "Mac Classic (2 HD Floppies/HDD)"
+msgid "Mac SE (4Mb RAM, 2 LD Floppies/HDD)"
 msgstr ""
 
 #. TRANSLATION: mame/pcsx2
 msgctxt "game_options"
-msgid "Mac II (Color, 2 HD Floppies/CD/HDD)"
+msgid "Mac Classic (4Mb RAM, 2 HD Floppies/HDD)"
 msgstr ""
 
 #. TRANSLATION: mame/pcsx2
 msgctxt "game_options"
-msgid "Mac IIx (Color, 2 HD Floppies/CD/HDD)"
+msgid "Mac II (2Mb RAM, Color, 2 HD Floppies/CD/HDD)"
+msgstr ""
+
+#. TRANSLATION: mame/pcsx2
+msgctxt "game_options"
+msgid "Mac IIx (2Mb RAM, Color, 2 HD Floppies/CD/HDD)"
+msgstr ""
+
+#. TRANSLATION: mame/pcsx2
+msgctxt "game_options"
+msgid "Mac LC 3 (Default) (4Mb RAM, Color, 2 HD Floppies/CD/HDD)"
 msgstr ""
 
 #. TRANSLATION: mame/pcsx2
